cmake_minimum_required(VERSION 3.25)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

add_executable(2015_01 2015/Day01/Day01.cpp)

add_executable(2016_01 2016/Day01/Day01.cpp)

add_executable(2017_01 2017/Day01/Day01.cpp)

add_executable(2018_01 2018/Day01/Day01.cpp)
add_executable(2018_02 2018/Day02/Day02.cpp)

add_executable(2019_01 2019/Day01/Day01.cpp)

add_executable(2020_01 2020/Day01/Day01.cpp)

add_executable(2021_01 2021/Day01/Day01.cpp)

add_executable(2022_01 2022/Day01/Day01.cpp)
add_executable(2022_02 2022/Day02/Day02.cpp)